--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <meta content='width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no' name='viewport'>
   <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
   <meta name="format-detection" content="telephone=no" />
-<link href="/css/app.50b8c42c.css" rel="stylesheet"></head>
+<link href="/css/app.08c1b523.css" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/js/vendor.50b8c42c.js"></script><script type="text/javascript" src="/js/app.50b8c42c.js"></script></body>
+<script type="text/javascript" src="/js/vendor.08c1b523.js"></script><script type="text/javascript" src="/js/app.08c1b523.js"></script></body>
+<!-- <script src="//nnfw.jss.com.cn/A28F15F3949846D79C9F2FA2EE565B68/eruda.min.js"></script> -->
 <script>
+    // eruda.init()
   var hostname = window.location.hostname;
   var protocol = window.location.protocol
   //非https 强制跳转到https
